// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas event data HTML event "contextmenu" should fire a corresponding canvas event 1`] = `
[
  [
    "contextmenu:before",
    {
      "e": MouseEvent {
        "isTrusted": false,
      },
      "subTargets": [],
      "target": undefined,
    },
  ],
  [
    "contextmenu",
    {
      "e": MouseEvent {
        "isTrusted": false,
      },
      "subTargets": [],
      "target": undefined,
    },
  ],
]
`;

exports[`Canvas event data HTML event "dblclick" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:dblclick",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "button": 1,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [],
      "target": undefined,
      "transform": null,
    },
  ],
]
`;

exports[`Canvas event data HTML event "drag" should fire a corresponding canvas event 1`] = `
[
  [
    "dragstart",
    {
      "e": MouseEvent {
        "isTrusted": false,
      },
      "target": "Drag Target",
    },
  ],
  [
    "drag",
    {
      "dragSource": "Drag Target",
      "dropTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "target": "Drag Target",
    },
  ],
]
`;

exports[`Canvas event data HTML event "dragend" should fire a corresponding canvas event 1`] = `
[
  [
    "dragstart",
    {
      "e": MouseEvent {
        "isTrusted": false,
      },
      "target": "Drag Target",
    },
  ],
  [
    "dragend",
    {
      "didDrop": false,
      "dragSource": "Drag Target",
      "dropTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "subTargets": [],
      "target": "Drag Target",
    },
  ],
  [
    "mouse:up:before",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "button": 1,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [
        "Drag Target",
      ],
      "target": "Drag Target",
      "transform": null,
    },
  ],
  [
    "mouse:up",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "button": 1,
      "currentSubTargets": [
        "Drag Target",
      ],
      "currentTarget": "Drag Target",
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [
        "Drag Target",
      ],
      "target": "Drag Target",
      "transform": null,
    },
  ],
  [
    "after:render",
    {
      "ctx": CanvasRenderingContext2D {
        "canvas": <canvas
          class="upper-canvas"
          data-fabric="top"
          draggable="true"
          height="150"
          style="position: absolute; left: 0px; top: 0px; user-select: none; width: 300px; height: 150px; cursor: move;"
          width="300"
        />,
        "createPattern": [Function],
        "drawImage": [Function],
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "dragenter" should fire a corresponding canvas event 1`] = `
[
  [
    "dragstart",
    {
      "e": MouseEvent {
        "isTrusted": false,
      },
      "target": "Drag Target",
    },
  ],
  [
    "dragenter",
    {
      "dragSource": "Drag Target",
      "e": MouseEvent {
        "isTrusted": false,
      },
      "subTargets": [
        "Drag Target",
      ],
      "target": "Drag Target",
    },
  ],
  [
    "drag:leave",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "dragSource": "Drag Target",
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "previousTarget": undefined,
      "subTargets": [
        "Drag Target",
      ],
      "target": "Drag Target",
    },
  ],
]
`;

exports[`Canvas event data HTML event "dragleave" should fire a corresponding canvas event 1`] = `
[
  [
    "dragstart",
    {
      "e": MouseEvent {
        "isTrusted": false,
      },
      "target": "Drag Target",
    },
  ],
  [
    "dragleave",
    {
      "dragSource": "Drag Target",
      "e": MouseEvent {
        "isTrusted": false,
      },
      "subTargets": [],
      "target": undefined,
    },
  ],
]
`;

exports[`Canvas event data HTML event "dragover" should fire a corresponding canvas event 1`] = `
[
  [
    "dragstart",
    {
      "e": MouseEvent {
        "isTrusted": false,
      },
      "target": "Drag Target",
    },
  ],
  [
    "dragover",
    {
      "canDrop": true,
      "dragSource": "Drag Target",
      "dropTarget": "Drag Target",
      "e": MouseEvent {
        "isTrusted": false,
      },
      "subTargets": [
        "Drag Target",
      ],
      "target": "Drag Target",
    },
  ],
  [
    "drag:leave",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "canDrop": false,
      "dragSource": "Drag Target",
      "dropTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "previousTarget": undefined,
      "subTargets": [
        "Drag Target",
      ],
      "target": "Drag Target",
    },
  ],
]
`;

exports[`Canvas event data HTML event "drop" should fire a corresponding canvas event 1`] = `
[
  [
    "dragstart",
    {
      "e": MouseEvent {
        "isTrusted": false,
      },
      "target": "Drag Target",
    },
  ],
  [
    "drop:before",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "didDrop": false,
      "dragSource": "Drag Target",
      "dropTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [
        "Drag Target",
      ],
      "target": "Drag Target",
    },
  ],
  [
    "drop",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "didDrop": false,
      "dragSource": "Drag Target",
      "dropTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [
        "Drag Target",
      ],
      "target": "Drag Target",
    },
  ],
  [
    "drop:after",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "didDrop": false,
      "dragSource": "Drag Target",
      "dropTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [
        "Drag Target",
      ],
      "target": "Drag Target",
    },
  ],
]
`;

exports[`Canvas event data HTML event "mousedown" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:down:before",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "button": 1,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [],
      "target": undefined,
      "transform": null,
    },
  ],
  [
    "mouse:down",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "button": 1,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [],
      "target": undefined,
      "transform": null,
    },
  ],
]
`;

exports[`Canvas event data HTML event "mouseenter" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:over",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "mouseleave" should fire a corresponding canvas event 1`] = `[]`;

exports[`Canvas event data HTML event "mousemove" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:move:before",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "button": 1,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [],
      "target": undefined,
      "transform": null,
    },
  ],
  [
    "mouse:move",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "button": 1,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [],
      "target": undefined,
      "transform": null,
    },
  ],
]
`;

exports[`Canvas event data HTML event "mouseout" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:out",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "target": undefined,
    },
  ],
]
`;

exports[`Canvas event data HTML event "mouseover" should fire a corresponding canvas event 1`] = `[]`;

exports[`Canvas event data HTML event "mouseup" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:up:before",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "button": 1,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [],
      "target": undefined,
      "transform": null,
    },
  ],
  [
    "mouse:up",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "button": 1,
      "currentSubTargets": [],
      "currentTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": true,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [],
      "target": undefined,
      "transform": null,
    },
  ],
]
`;

exports[`Canvas event data HTML event "wheel" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:wheel",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "button": 1,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": false,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "subTargets": [],
      "target": undefined,
      "transform": null,
    },
  ],
]
`;
